# LabsBSUIR

./: .gitignore
LabsAIPOS/: 2.4.1.2 Packet Tracer - Skills Integration Challenge.pka  6.3.1.10 Packet Tracer - Exploring Internetworking Devices.pka  firstLab.pcapng
LabsAIPOS/FirstLab/: 1.2.4.4 Packet Tracer - Representing the Network.pka  2.1.4.8 Packet Tracer - Navigating the IOS (1).pka  2.2.3.3 Packet Tracer - Configuring Initial Switch Settings.pka
LabsAIPOS/SecondLab/: 5.1.4.4 Packet Tracer - Identify MAC and IP Addresses.pka  5.2.1.7 Packet Tracer - Examine the ARP Table (1).pka  (+9 more)
LabsIgisit/: ThirdLab.pages
LabsMOIS/: FirstLab.txt  FirstLabAbsolute.gwf  FirstLabAbsolute.scs  FirstLabRelative.gwf
LabsNM/: FifthLab.nb  FifthLabDOCXtoPrintLastVersion.nb.docx  FifthLabPDFtoPrint.nb.pages  FirstLab.nb  FourthLab.nb  Lab6-1.nb  Lab6-2.nb  SixLab.nb  SixLabDOCXtoPrintLastVersion.nb.docx  SixLabPDFtoPrint.nb.docx  SixLabPDFtoPrint.nb.pages  TrirdLab.nb  thirdLab.pages  thirdLabtoPrint.docx  ЧМ_2.pages
LabsOAIP/: Задание_по_курсовому_проекту_Астахов_Артём.pages
LabsOMIS/: .$BPMN.drawio.bkp  .$brick_puprle.png.bkp  .$brick_purple.png.bkp  BPMN.drawio  BPMN_2.drawio  ER_entities.drawio  er-chen.drawio
LabsOS/: AllComnds.txt  FirstTask.sh  MainTask.sh  output
LabsOS/FourthLab/FirstTask/: CMakeLists.txt  TestsForLab.cpp  main.cpp  memory_manager.h
LabsOTIS/: reportOTIS.pages
LabsPBZ/: create_data.sql  report.pages  requests.sql
MSISVIT/: 4 пз.pages  договор.pages
RR_PPOIS/: graph_A.gwf  graph_B.gwf  graph_C.gwf  graph_D.gwf  graph_E.gwf
(+585 files in other folders)
